womtool/src/test/resources/validate/wdl/wdl_draft3/invalid/bad_task/bad_task.wdl
version 1.0

workflow oops {
  call oopsie
}

task oopsie {
  input {
    String str
  }
  command { echo ${str} }
  runtime { docker: docker_image }
}
